[gd_scene load_steps=5 format=3 uid="uid://d1xj5a7t72vxp"]

[ext_resource type="Script" path="res://enemies/Maiden/maiden_ai_manager.gd" id="1_cdjtu"]
[ext_resource type="Script" path="res://enemies/Maiden/Projectile Script Manager.gd" id="2_wmgba"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1g02j"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3akvr"]
transparency = 4
blend_mode = 1
albedo_color = Color(0.988235, 0.831373, 0.8, 0.337255)

[node name="Maiden AI Manager" type="Node3D"]
script = ExtResource("1_cdjtu")

[node name="PlayerDetectionSphere" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionSphere"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
shape = SubResource("SphereShape3D_1g02j")

[node name="Translucent Sphere" type="CSGSphere3D" parent="PlayerDetectionSphere/CollisionShape3D"]
material = SubResource("StandardMaterial3D_3akvr")

[node name="PlayerDetectionSphere2" type="Area3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionSphere2"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
shape = SubResource("SphereShape3D_1g02j")

[node name="Translucent Sphere" type="CSGSphere3D" parent="PlayerDetectionSphere2/CollisionShape3D"]
material = SubResource("StandardMaterial3D_3akvr")

[node name="Projectile Script Manager" type="Node" parent="."]
script = ExtResource("2_wmgba")

[node name="Attack Cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="projectile" from="." to="Projectile Script Manager" method="_on_maiden_ai_manager_projectile"]
[connection signal="area_entered" from="PlayerDetectionSphere" to="." method="_on_player_detection_sphere_area_entered"]
[connection signal="area_exited" from="PlayerDetectionSphere" to="." method="_on_player_detection_sphere_area_exited"]
[connection signal="area_exited" from="PlayerDetectionSphere2" to="." method="_on_player_detection_sphere_2_area_exited"]
[connection signal="timeout" from="Attack Cooldown" to="." method="_on_attack_cooldown_timeout"]
